Fixed visual issues on mobile layouts

--- a/src/components/Donate/DonatePage.css
+++ b/src/components/Donate/DonatePage.css
@@ -19,7 +19,7 @@
 .paypalBtns {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 60%;
   justify-content: center;
   align-self: center;
   border: black solid 5px;
@@ -78,8 +78,8 @@
   width: 50%;
   border: solid green 10px;
   border-radius: 30px;
-  text-align: center;
-  padding: 10px;
+  text-align: left;
+  padding: 40px;
   gap: 20px;
   /* backdrop-filter: blur(20px); */
   background: white;
